# picomp

./: README.md  picomp.1  picomp.cabal
src/: main.hs
src/Compression/: Pi.hs
